--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@
 }
 
 input, textarea {
-  @apply border-gray-300 focus:border-blue-500 focus:ring-blue-500;
+  @apply bg-black border-zinc-700 text-white placeholder-zinc-500 focus:border-zinc-500 focus:ring-zinc-500;
 }
